decaf_PA2/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ForeachStmt
  34       | GuardedStmt
  35       | ReturnStmt ';'
  36       | PrintStmt ';'
  37       | BreakStmt ';'
  38       | StmtBlock
  39       | Scopy ';'

  40  GuardedStmt : IF '{' BranchList '}'

  41  BranchList : BranchList GUARD IFSubStmt
  42             | IFSubStmt
  43             |

  44  IFSubStmt : Expr ':' Stmt

  45  Scopy : SCOPY '(' LValue ',' Expr ')'

  46  SimpleStmt : LValue '=' Expr
  47             | Call
  48             |

  49  Receiver : Expr '.'
  50           |

  51  LValue : Receiver IDENTIFIER
  52         | Expr '[' Expr ']'
  53         | VARIFIC IDENTIFIER

  54  Call : Receiver IDENTIFIER '(' Actuals ')'

  55  Expr : LValue
  56       | Call
  57       | Constant
  58       | Expr '+' Expr
  59       | Expr '-' Expr
  60       | Expr '*' Expr
  61       | Expr '/' Expr
  62       | Expr '%' Expr
  63       | Expr EQUAL Expr
  64       | Expr NOT_EQUAL Expr
  65       | Expr '<' Expr
  66       | Expr '>' Expr
  67       | Expr LESS_EQUAL Expr
  68       | Expr GREATER_EQUAL Expr
  69       | Expr AND Expr
  70       | Expr OR Expr
  71       | '(' Expr ')'
  72       | '-' Expr
  73       | '!' Expr
  74       | READ_INTEGER '(' ')'
  75       | READ_LINE '(' ')'
  76       | THIS
  77       | NEW IDENTIFIER '(' ')'
  78       | NEW Type '[' Expr ']'
  79       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  80       | '(' CLASS IDENTIFIER ')' Expr
  81       | Expr REPEAT Expr
  82       | Expr '[' Expr ']' DEFT Expr

  83  Constant : LITERAL
  84           | NULL

  85  Actuals : ExprList
  86          |

  87  ExprList : ExprList ',' Expr
  88           | Expr

  89  WhileStmt : WHILE '(' Expr ')' Stmt

  90  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  91  ForeachStmt : FOREACH '(' Type IDENTIFIER IN Expr WHILECOND ')' Stmt
  92              | FOREACH '(' VARIFIC IDENTIFIER IN Expr WHILECOND ')' Stmt

  93  WHILECOND : WHILE Expr

  94  BreakStmt : BREAK

  95  IfStmt : IF '(' Expr ')' Stmt ElseClause

  96  ElseClause : ELSE Stmt
  97             |

  98  ReturnStmt : RETURN Expr
  99             | RETURN

 100  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (48)
	Receiver : .  (50)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	VARIFIC  shift 53
	NULL  shift 54
	THIS  shift 55
	WHILE  shift 56
	FOR  shift 57
	IF  shift 58
	RETURN  shift 59
	BREAK  shift 60
	NEW  shift 61
	SCOPY  shift 62
	PRINT  shift 63
	READ_INTEGER  shift 64
	READ_LINE  shift 65
	LITERAL  shift 66
	INSTANCEOF  shift 67
	FOREACH  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'{'  shift 48
	'}'  shift 72
	IDENTIFIER  reduce 50
	';'  reduce 48

	VariableDef  goto 73
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ForeachStmt  goto 80
	GuardedStmt  goto 81
	ReturnStmt  goto 82
	PrintStmt  goto 83
	BreakStmt  goto 84
	Scopy  goto 85
	Expr  goto 86
	LValue  goto 87
	Call  goto 88
	Receiver  goto 89
	Constant  goto 90


state 53
	LValue : VARIFIC . IDENTIFIER  (53)

	IDENTIFIER  shift 91
	.  error


state 54
	Constant : NULL .  (84)

	.  reduce 84


state 55
	Expr : THIS .  (76)

	.  reduce 76


state 56
	WhileStmt : WHILE . '(' Expr ')' Stmt  (89)

	'('  shift 92
	.  error


state 57
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (90)

	'('  shift 93
	.  error


state 58
	GuardedStmt : IF . '{' BranchList '}'  (40)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (95)

	'('  shift 94
	'{'  shift 95
	.  error


state 59
	ReturnStmt : RETURN . Expr  (98)
	ReturnStmt : RETURN .  (99)
	Receiver : .  (50)

	VARIFIC  shift 53
	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 64
	READ_LINE  shift 65
	LITERAL  shift 66
	INSTANCEOF  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 50
	';'  reduce 99

	Expr  goto 96
	LValue  goto 97
	Call  goto 98
	Receiver  goto 89
	Constant  goto 90


state 60
	BreakStmt : BREAK .  (94)

	.  reduce 94


state 61
	Expr : NEW . IDENTIFIER '(' ')'  (77)
	Expr : NEW . Type '[' Expr ']'  (78)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 99
	.  error

	Type  goto 100


state 62
	Scopy : SCOPY . '(' LValue ',' Expr ')'  (45)

	'('  shift 101
	.  error


state 63
	PrintStmt : PRINT . '(' ExprList ')'  (100)

	'('  shift 102
	.  error


state 64
	Expr : READ_INTEGER . '(' ')'  (74)

	'('  shift 103
	.  error


state 65
	Expr : READ_LINE . '(' ')'  (75)

	'('  shift 104
	.  error


state 66
	Constant : LITERAL .  (83)

	.  reduce 83


state 67
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (79)

	'('  shift 105
	.  error


state 68
	ForeachStmt : FOREACH . '(' Type IDENTIFIER IN Expr WHILECOND ')' Stmt  (91)
	ForeachStmt : FOREACH . '(' VARIFIC IDENTIFIER IN Expr WHILECOND ')' Stmt  (92)

	'('  shift 106
	.  error

